<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Monster Wiki</string>
    <string name="_13" />
    <string name="speed" />
    <string name="life" />
    <string name="power" />
    <string name="input_level" />
    <string name="stats_lvl_0" />
    <string name="fire_lion" />
    <string name="stamina" />
    <string name="metalsaur">Metalsaur</string>
    <string name="panda">Panda</string>
    <string name="fire_lion1">Fire Lion</string>
    <string name="genie">Genie</string>
    <string name="light_spirit">Light Spirit</string>
    <string name="rockilla">Rockilla</string>
    <string name="thunder_eagle">Thunder Eagle</string>
    <string name="turtle">Turtle</string>
    <string name="tiranno_king">Tyranno King</string>
    <string name="lion_description">Possessing a mane of white-hot hell fire and more than just a sting in his tail – the Fire Lion is a creature of mythic awesomeness! The Fire Lion will make fast work of anyone foolish enough to challenge him.</string>
    <string name="genie_description">Formed from bright, hot-blue fire and able to travel great distances in the blink of an eye. Think twice before entering into any kind of agreement with these magical marvels.</string>
    <string name="light_spirit_description">These lighthearted pixie creatures spend most of their time unseen. On account of how they are made from light - they often get mistaken for mirages, yet here they are, right on your island!</string>
    <string name="metalsaur_description">Metal monsters are tough, hard to beat and dazzling. Metalsaur is pure metal, common but deadly. And now with him, a new age of breeding has started! The new Metal element is here!</string>
    <string name="panda_description">The Panda, long a symbol of melancholy and sadness, but no longer! These Pandas are Nature\'s ninjas! What they lack in stealth, they more than make up for in unexpected agility, reflexes and... clumsiness.</string>
    <string name="rockilla_description">These hardened souls roam the earthy plains in search of their tail. They live by a strict code favoring loyalty over all else; any who challenge this are reduced to dust by a swift blow from their gargantuan fists.</string>
    <string name="thunder_eagle_description">The Bringer of Storms, a once-loyal servant to the Gods of Thunder, transformed into Thunder Eagle form after a terrible betrayal. This sparky creature offers the perfect mix of grace and danger.</string>
    <string name="turtle_description">Shy and unassuming, this tricky creature is master of the water realm and sharper than shattered glass. The Water Turtle may be slow on land, but he’s as dangerous as he is graceful in the ocean.</string>
    <string name="tyranno_description">Hail to the king baby! Self-proclaimed Kings of the Lizards, these dark creatures offer the perfect mix of danger, mystery and coolness to any island. Just don’t mention their short arms... these tyrants have got a bite!</string>
    <string name="name_firelion">Fire Lion</string>
    <string name="name_genie">Genie</string>
    <string name="name_lightspirit">Light Spirit</string>
    <string name="name_metalsaur">Metalsaur</string>
    <string name="name_panda">Panda</string>
    <string name="name_rockilla">Rockilla</string>
    <string name="name_thundereagle">Thunder Eagle</string>
    <string name="name_turtle">Turtle</string>
    <string name="name_tyrannoking">Tyranno King</string>
    <string name="weakness">Weakness</string>
    <string name="description">Description</string>
</resources>