<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        tools:background="#dbf6f5f2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lightspirit"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_FireLion"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="#43c0441f"
                android:drawableLeft="@drawable/fire_lion_1"
                android:onClick="GoTo"
                android:text="@string/fire_lion1"
                android:textColor="#c24818"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_LightSpirit"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="#6101283b"
                android:drawableLeft="@drawable/genie_1"
                android:onClick="GoTo"
                android:text="@string/genie"
                android:textColor="#1a5e67"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_Genie"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="#4b8c1fa2"
                android:drawableLeft="@drawable/light_spirit_1"
                android:onClick="GoTo"
                android:text="@string/light_spirit"
                android:textColor="#a60fbc"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_Metalsaur"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="#5b887c7c"
                android:drawableLeft="@drawable/metalsaur_1"
                android:onClick="GoTo"
                android:text="@string/metalsaur"
                android:textColor="#c85c1c"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/button_"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="#3ed1cdcd"
                android:drawableLeft="@drawable/panda_1"
                android:onClick="GoTo"
                android:text="@string/panda"
                android:textColor="#f8f4f4"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="#4b862626"
                android:drawableLeft="@drawable/rockilla_1a"
                android:onClick="GoTo"
                android:text="@string/rockilla"
                android:textColor="#914040"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="#56d9af07"
                android:drawableLeft="@drawable/thunder_eagle_2"
                android:onClick="GoTo"
                android:text="@string/thunder_eagle"
                android:textColor="#a9791f"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="#501684a1"
                android:drawableLeft="@drawable/turtle_1"
                android:onClick="GoTo"
                android:text="@string/turtle"
                android:textColor="#0e8066"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="40dp"
                android:background="#440f0b2a"
                android:drawableLeft="@drawable/tyrannoking_1"
                android:onClick="GoTo"
                android:text="@string/tiranno_king"
                android:textColor="#1a43a9"
                android:textStyle="bold"
                android:typeface="serif" />

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
